Fix scrollbar from showing on Options page (#4263)

--- a/lighthouse-extension/app/styles/lighthouse.css
+++ b/lighthouse-extension/app/styles/lighthouse.css
@@ -139,7 +139,7 @@ html, body {
   will-change: opacity;
   transition: opacity 0.150s cubic-bezier(0,0,0.41,1);
   text-align: center;
-  padding: 20px;
+  padding: 16px;
 }
 
 .subpage--visible {
